.metadata/.plugins/org.eclipse.cdt.ui/EX_PidPlus_F407ZGT6_Hollies.build.log
11:55:34 **** Incremental Build of configuration Debug for project EX_PidPlus_F407ZGT6_Hollies ****
make -j8 all 
arm-none-eabi-gcc "../MyCode/oled_spi.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../MyCode/include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"MyCode/oled_spi.d" -MT"MyCode/oled_spi.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "MyCode/oled_spi.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../MyCode/include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../MyCode/include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
arm-none-eabi-gcc "../Core/Src/tim.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../MyCode/include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/tim.d" -MT"Core/Src/tim.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/tim.o"
In file included from ../Core/Src/main.c:27:
../MyCode/include/pidPlus.h:24:14: warning: 'VariableIntegralCoefficient' declared 'static' but never defined [-Wunused-function]
   24 | static float VariableIntegralCoefficient(float error, float absMax, float absMin);
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ../MyCode/oled_spi.c:1:
../MyCode/oled_spi.c: In function 'OLED_WR_Byte':
../MyCode/include/oled_spi.h:28:43: error: 'OLED_DC_GPIO_Port' undeclared (first use in this function)
   28 | #define OLED_DC_Set()   HAL_GPIO_WritePin(OLED_DC_GPIO_Port, OLED_DC_Pin, GPIO_PIN_SET);
      |                                           ^~~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:21:3: note: in expansion of macro 'OLED_DC_Set'
   21 |   OLED_DC_Set(); //å‘½ä»¤/æ•°æ®æ ‡å¿—ä½ç½®ä¸?1ï¼Œåˆ™è¡¨ç¤ºä¼ é?çš„æ˜¯å‘½ä»¤å­—èŠ?
      |   ^~~~~~~~~~~
../MyCode/include/oled_spi.h:28:43: note: each undeclared identifier is reported only once for each function it appears in
   28 | #define OLED_DC_Set()   HAL_GPIO_WritePin(OLED_DC_GPIO_Port, OLED_DC_Pin, GPIO_PIN_SET);
      |                                           ^~~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:21:3: note: in expansion of macro 'OLED_DC_Set'
   21 |   OLED_DC_Set(); //å‘½ä»¤/æ•°æ®æ ‡å¿—ä½ç½®ä¸?1ï¼Œåˆ™è¡¨ç¤ºä¼ é?çš„æ˜¯å‘½ä»¤å­—èŠ?
      |   ^~~~~~~~~~~
../MyCode/include/oled_spi.h:28:62: error: 'OLED_DC_Pin' undeclared (first use in this function); did you mean 'OLED_DC_Clr'?
   28 | #define OLED_DC_Set()   HAL_GPIO_WritePin(OLED_DC_GPIO_Port, OLED_DC_Pin, GPIO_PIN_SET);
      |                                                              ^~~~~~~~~~~
../MyCode/oled_spi.c:21:3: note: in expansion of macro 'OLED_DC_Set'
   21 |   OLED_DC_Set(); //å‘½ä»¤/æ•°æ®æ ‡å¿—ä½ç½®ä¸?1ï¼Œåˆ™è¡¨ç¤ºä¼ é?çš„æ˜¯å‘½ä»¤å­—èŠ?
      |   ^~~~~~~~~~~
../MyCode/include/oled_spi.h:32:43: error: 'OLED_CS_GPIO_Port' undeclared (first use in this function)
   32 | #define OLED_CS_Clr()   HAL_GPIO_WritePin(OLED_CS_GPIO_Port, OLED_CS_Pin, GPIO_PIN_RESET);
      |                                           ^~~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:26:2: note: in expansion of macro 'OLED_CS_Clr'
   26 |  OLED_CS_Clr(); //ç‰‡é?‰ä¿¡å·ä¸ºä½ï¼Œè¡¨ç¤ºé€‰ä¸­OLED
      |  ^~~~~~~~~~~
../MyCode/include/oled_spi.h:32:62: error: 'OLED_CS_Pin' undeclared (first use in this function); did you mean 'OLED_CS_Clr'?
   32 | #define OLED_CS_Clr()   HAL_GPIO_WritePin(OLED_CS_GPIO_Port, OLED_CS_Pin, GPIO_PIN_RESET);
      |                                                              ^~~~~~~~~~~
../MyCode/oled_spi.c:26:2: note: in expansion of macro 'OLED_CS_Clr'
   26 |  OLED_CS_Clr(); //ç‰‡é?‰ä¿¡å·ä¸ºä½ï¼Œè¡¨ç¤ºé€‰ä¸­OLED
      |  ^~~~~~~~~~~
../MyCode/oled_spi.c:27:2: warning: implicit declaration of function 'HAL_SPI_Transmit' [-Wimplicit-function-declaration]
   27 |  HAL_SPI_Transmit(&hspi1, &dat, 1, 1000); //oled.cæ–‡ä»¶å”¯ä¸€ä¿®æ”¹çš„åœ°æ–¹ï¼Œè¿™é‡Œæ˜¯åˆ©ç”¨äº†halåº“æä¾›çš„SPIä¼ é?å‡½æ•?
      |  ^~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:27:20: error: 'hspi1' undeclared (first use in this function)
   27 |  HAL_SPI_Transmit(&hspi1, &dat, 1, 1000); //oled.cæ–‡ä»¶å”¯ä¸€ä¿®æ”¹çš„åœ°æ–¹ï¼Œè¿™é‡Œæ˜¯åˆ©ç”¨äº†halåº“æä¾›çš„SPIä¼ é?å‡½æ•?
      |                    ^~~~~
In file included from ../MyCode/oled_spi.c:1:
../MyCode/oled_spi.c: In function 'OLED_Init':
../MyCode/include/oled_spi.h:25:43: error: 'OLED_RST_GPIO_Port' undeclared (first use in this function)
   25 | #define OLED_RST_Clr()  HAL_GPIO_WritePin(OLED_RST_GPIO_Port, OLED_RST_Pin, GPIO_PIN_RESET);
      |                                           ^~~~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:190:2: note: in expansion of macro 'OLED_RST_Clr'
  190 |  OLED_RST_Clr();
      |  ^~~~~~~~~~~~
../MyCode/include/oled_spi.h:25:63: error: 'OLED_RST_Pin' undeclared (first use in this function); did you mean 'OLED_RST_Set'?
   25 | #define OLED_RST_Clr()  HAL_GPIO_WritePin(OLED_RST_GPIO_Port, OLED_RST_Pin, GPIO_PIN_RESET);
      |                                                               ^~~~~~~~~~~~
../MyCode/oled_spi.c:190:2: note: in expansion of macro 'OLED_RST_Clr'
  190 |  OLED_RST_Clr();
      |  ^~~~~~~~~~~~
make: *** [MyCode/subdir.mk:25: MyCode/oled_spi.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

11:55:34 Build Failed. 9 errors, 2 warnings. (took 460ms)

